spacing fixed

--- a/aboutMe.css
+++ b/aboutMe.css
@@ -47,7 +47,7 @@
     #body{
         width: 100%;
         position: absolute;
-        top: 20%;
+        top: 21%;
         text-align: center;
         color: #4a4d4e;
         font-family: 'RaphaelIcons';
@@ -60,7 +60,7 @@
     #aboutMe{
         width: 85%;
         position: absolute;
-        top: 40%;
+        top: 44%;
         transform: translate(10%, 0);
         text-align: left;
         color: #4a4d4e;
